@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.3
+	* :set showtabline now finally works as expected for all values
 
 2007-10-11:
 	* version 0.5.2
